--- a/movie.html
+++ b/movie.html
@@ -1,11 +1,13 @@
-<div class="demo">
-    <div id="seat-map">
-      <div class="front">SCREEN</div>
-    </div>
-    <div class="booking-details">
-      <p>Movie: <span> Gingerclown</span></p>
-      <p>Time: <span>November 3, 21:00</span></p>
-      <p>Seat: </p>
-      <ul id="selected-seats"></ul>
-      <p>Tickets: <span id="counter">0</span></p>
-      <p>Total: <b>$<span id="total">0</span></b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="movie.css">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
