--- a/movie.html
+++ b/movie.html
@@ -59,7 +59,7 @@
                   </div>
                 </fieldset>
               </form>
-              <p id="perTicketPrice">Per ticket price = &#x20b9; 100.00</p>
+              <p id="perTicketPrice">Per ticket price = 100.00</p>
               <p id="discount">
                 <span id="disount_title">Discounts:</span>
               <ul>
