--- a/movie.html
+++ b/movie.html
@@ -31,7 +31,10 @@
         <small>Occupied</small>
       </li>
     </ul>
-
+    <p>
+        <label for="date">Date<br/><span id="dateNote"><a href="https://support.mozilla.org/en-US/questions/986096"></a></span></label>
+        <input type="date" name="date" id="date" min="today" required />
+    </p>
     <div class="container">
       <div class="screen"></div>
 
