--- a/payment.html
+++ b/payment.html
@@ -13,7 +13,7 @@
     <h3>Total Amount to Pay:$<span id="amount"></span></h3>
     <form>
         <label for="holdername">Card Holder Name</label><br>
-        <input type="text" id="holdername" placeholder="Nagur"><br><br>
+        <input type="text" id="holdername" placeholder="Nagur Meeravalli Sheik"><br><br>
         <label for="ccnum">Credit card number</label><br>
         <input type="text" id="ccnum" name="cardnumber" placeholder="3245-1587-0684-9127"><br><br>
         <label for="cvv">CVV</label><br>
