--- a/movie.html
+++ b/movie.html
@@ -112,7 +112,8 @@
       >
     </p>
     <br>
-    <a href="#" class="next">Confirm payment  &#8250</a>
+	<p><a href="payment.html">Make payment &#8250</a></p>
+    
     <script src="movie.js" type="text/javascript"></script>
   </body>
 </html>
